Finished photo gallery exercise

--- a/photoGallery/photoGallery.html
+++ b/photoGallery/photoGallery.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="photoGallery.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+    <img src="https://picsum.photos/800/600" alt="">
+    <img id="mainImage" src=https://picsum.photos/800/600?1" alt="">
+    <img src="https://picsum.photos/800/600?2" alt="">
+    <img src="https://picsum.photos/800/600?3" alt="">
+    <img src="https://picsum.photos/800/600?4" alt="">
+    <img src="https://picsum.photos/800/600?5" alt="">
+    <img src="https://picsum.photos/800/600?6" alt="">
+    <img src="https://picsum.photos/800/600?7" alt="">
+    <img src="https://picsum.photos/800/600?8" alt="">
 </body>
 </html>
