Learned about image manipulation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Title</title>
 </head>
 <body>
-<h1>My Heading</h1>
+<img src="images/dishes.png" alt="">
+<img src="images/landing.png" alt="">
+<img src="images/rocketship.png" alt="">
+<img src="images/saturn.png" alt="">
+<img src="images/ufo.png" alt="">
 </body>
 </html>
