Learned about CSS animations

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<img src="images/dishes.png" alt="">
-<img src="images/landing.png" alt="">
-<img src="images/rocketship.png" alt="">
-<img src="images/saturn.png" alt="">
-<img src="images/ufo.png" alt="">
+<div class="box">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi id iure natus neque nisi?
+</div>
 </body>
 </html>
